[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depot"
version = "1.0.2"
description = "A collection of utilities for modding Subway Builder."
dependencies = [
    "requests>=2.25.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json"]
